# html-parser-and-extractor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: random_conf.txt  random_file.html
data/extractor/: basic
data/node_iterator/: basic
data/parser_html/: attributes  big_page  character_reference  custom_tags  misnested_tags  open_nodes  script  script_test  spaces  textarea_test
include/: conf_object.hpp  conf_parser.hpp  exceptions.hpp  extractor.hpp  html_parser.hpp  lexer.hpp  node.hpp  node_iterator.hpp  parser.hpp  sources.hpp  token.hpp  utils.hpp
src/: conf_object.cpp  conf_parser.cpp  extractor.cpp  html_parser.cpp  lexer.cpp  main.cpp  node.cpp  node_iterator.cpp  parser.cpp  sources.cpp  utils.cpp
tests/: conf_parser.cpp  extractor.cpp  html_parser.cpp  lexer_conf.cpp  lexer_html.cpp  main.cpp  node_iterator.cpp  parser_conf.cpp  parser_html.cpp  sources.cpp  test_sources.cpp
